plang/testing/logs/false-incorrect/1/program1.p.p
wKL (m6t (YgB) cSQw4 mQb) :- o9 (vDMqZ UNKXc).
ndRbO (DmC) :- zvBKY YUPt2.
tH (Y) wD5bZ rVJ (i F0f).

r4d (NMT) NVj Uwye (LqTnm).

mBJqk (mmZW9 fNSO (b (UtW8) (y3wo s9Oy (TWV)) (M) w) (cFH e ghQp (bYTn (igR2R UFsbj) (O)) o) (Zk)).
wDTZ (ybS (z W) (uk CJ) sp765) NR kDEVm.
ux a (BJ7h2) :- (nFx); ydfWY; tzEl, pm; g (N4) HlBbB (dsd (k (wg W wzcZz U xfuM) r9nfD) (xcj HAkim) (mvex (F4ErZ) VEq (X) (Ej))) V, bY JQ XBNHK; gT (WQ6dU) (DJu), j kSf (rc4 EF4F (fyHQb S4 xnY vNAKC)); wizyV (Cvi) (urTHq) Ti; viGh wQB; r MNGD D, (((w))).


t SXj (hMT (jzZWv R3z6g) noCW) H (MWM) :- (aOquC), (m Y (QqLDs), oH); mJLc1 ulE2U, iKk (mDLJH bv Tvg2 (Hqk)) hgF (c Gm sR13 B (VK)); l51FH G (qv (k1Dq8) j BW (xf4 (Eg))) (LWe) (U9H); n3 j56 dJ3Hq, (kHv6F (NCR) (QxY) UNuFW); iNjWt (ZyV) (Upw), yC3 (uLAo (L4n)); (v3EQz; iRu).
? k UnZFm; ((gb (fFY4v) (dsz1c (puZt (PNB)) O5A lOeF) (dvGw) (O46g))), c (P945) ku (zfuEo Ag (gOrHw rJ (I)) (YItb) PpwJ) woJ; (xo R v); ((k (NY))).


